fix: xml file not compiled properly

--- a/source/SingleScope.Plugin.Popup/SingleScope.Plugin.Popup.csproj
+++ b/source/SingleScope.Plugin.Popup/SingleScope.Plugin.Popup.csproj
@@ -17,8 +17,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Resources\Layout\popup_loading.xml" />
-    <None Remove="Resources\Values\themes.xml" />
+    <AndroidResource Include="Resources\Android\Layout\popup_loading.xml" />
+    <AndroidResource Include="Resources\Android\Values\themes.xml" />
   </ItemGroup>
 
   <ItemGroup>
