--- a/source/SingleScope.Plugin.Core/SingleScope.Plugin.Core.csproj
+++ b/source/SingleScope.Plugin.Core/SingleScope.Plugin.Core.csproj
@@ -5,8 +5,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <VersionPrefix>1.0.0</VersionPrefix>
+    <VersionSuffix>alpha</VersionSuffix>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <PackageTags>SingleScope;Plugin</PackageTags>
+    <PackageTags>SingleScope;Plugin;Core</PackageTags>
     <Title>SingleScope.Plugin.Core</Title>
     <Authors>muhirwanto.dev</Authors>
     <PackageProjectUrl>https://github.com/muhirwanto-dev/singlescope-plugins</PackageProjectUrl>
