--- a/source/SingleScope.Plugin.Popup/SingleScope.Plugin.Popup.csproj
+++ b/source/SingleScope.Plugin.Popup/SingleScope.Plugin.Popup.csproj
@@ -29,4 +29,8 @@
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\SingleScope.Plugin.Core\SingleScope.Plugin.Core.csproj" />
+	</ItemGroup>
+
 </Project>
