--- a/source/SingleScope.Plugin.Popup/SingleScope.Plugin.Popup.csproj
+++ b/source/SingleScope.Plugin.Popup/SingleScope.Plugin.Popup.csproj
@@ -11,10 +11,9 @@
 	</PropertyGroup>
 
   <PropertyGroup>
-    <VersionPrefix>1.2.2</VersionPrefix>
-    <VersionSuffix>alpha</VersionSuffix>
+    <VersionPrefix>1.3.0</VersionPrefix>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <PackageTags>SingleScope;Plugin;Popup;MAUI</PackageTags>
+    <PackageTags>SingleScope;Plugin;Popup;MAUI;Dialog;Loading</PackageTags>
     <Title>SingleScope.Plugin.Popup</Title>
     <Authors>muhirwanto.dev</Authors>
     <Description>Popups plugin for .NET MAUI</Description>
