--- a/source/SingleScope.Plugin.Core/SingleScope.Plugin.Core.csproj
+++ b/source/SingleScope.Plugin.Core/SingleScope.Plugin.Core.csproj
@@ -10,6 +10,7 @@
     <Title>SingleScope.Plugin.Core</Title>
     <Authors>muhirwanto.dev</Authors>
     <PackageProjectUrl>https://github.com/muhirwanto-dev/singlescope-plugins</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/muhirwanto-dev/singlescope-plugins/main/logo.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/muhirwanto-dev/singlescope-plugins</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Copyright (c)  muhirwanto.dev 2024</Copyright>
