refactor: use WebView for gif image, it's eliminate the issue that Gif not playing in Release mode

--- a/source/SingleScope.Example/SingleScope.Example.csproj
+++ b/source/SingleScope.Example/SingleScope.Example.csproj
@@ -46,6 +46,11 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Raw\loading_example.gif" />
+	  <None Remove="Resources\Raw\loading_example.html" />
+	</ItemGroup>
+
+	<ItemGroup>
 	  <EmbeddedResource Include="Resources\Images\loading_example.gif" />
 	</ItemGroup>
 
