--- a/source/SingleScope.Plugin.Core/SingleScope.Plugin.Core.csproj
+++ b/source/SingleScope.Plugin.Core/SingleScope.Plugin.Core.csproj
@@ -4,7 +4,9 @@
     <TargetFrameworks>net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <VersionPrefix>1.3.1</VersionPrefix>
+    <VersionPrefix>1.4.0</VersionPrefix>
+    <AssemblyVersion>1.4.0</AssemblyVersion>
+    <FileVersion>1.4.0.1</FileVersion>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageTags>SingleScope;Plugin;Core;MAUI</PackageTags>
     <Title>SingleScope.Plugin.Core</Title>
