--- a/source/SingleScope.Collection/SingleScope.Collection.csproj
+++ b/source/SingleScope.Collection/SingleScope.Collection.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0</TargetFrameworks>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <VersionPrefix>1.5.0</VersionPrefix>
-    <AssemblyVersion>1.5.0</AssemblyVersion>
-    <FileVersion>1.5.0.2</FileVersion>
+    <VersionPrefix>1.0.0</VersionPrefix>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.1</FileVersion>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <PackageTags>SingleScope;Plugin;Core;MAUI</PackageTags>
-    <Title>SingleScope.Core</Title>
+    <PackageTags>SingleScope;Plugin;Collection</PackageTags>
+    <Title>SingleScope.Collection</Title>
     <Authors>muhirwanto.dev</Authors>
     <PackageProjectUrl>https://github.com/muhirwanto-dev/singlescope-plugins</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/muhirwanto-dev/singlescope-plugins/main/logo.png</PackageIconUrl>
@@ -24,6 +24,10 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SingleScope.Core\SingleScope.Core.csproj" />
   </ItemGroup>
 
 </Project>
