--- a/source/SingleScope.Maui/SingleScope.Maui.csproj
+++ b/source/SingleScope.Maui/SingleScope.Maui.csproj
@@ -10,9 +10,9 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
 
-    <VersionPrefix>2.1.0</VersionPrefix>
-    <AssemblyVersion>2.1.0</AssemblyVersion>
-    <FileVersion>2.1.0.3</FileVersion>
+    <VersionPrefix>2.1.2</VersionPrefix>
+    <AssemblyVersion>2.1.2</AssemblyVersion>
+    <FileVersion>2.1.2.5</FileVersion>
 	</PropertyGroup>
 
   <!--NuGet properties-->
@@ -54,10 +54,15 @@
     <ProjectReference Include="..\SingleScope.Maui.SourceGenerator\SingleScope.Maui.SourceGenerator.csproj"
                       OutputItemType="Analyzer"
                       ReferenceOutputAssembly="false">
-      <PrivateAssets>all</PrivateAssets>
     </ProjectReference>
 	</ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\SingleScope.Maui.SourceGenerator\bin\$(Configuration)\netstandard2.0\SingleScope.Maui.SourceGenerator.dll"
+          Pack="true" PackagePath="analyzers" Visible="false" 
+          />
+  </ItemGroup>
+  
   <ItemGroup>
 	  <Compile Update="Controls\LoadingPopup.xaml.cs">
 	    <DependentUpon>%(Filename)</DependentUpon>
