--- a/source/SingleScope.Maui.SourceGenerator/SingleScope.Maui.SourceGenerator.csproj
+++ b/source/SingleScope.Maui.SourceGenerator/SingleScope.Maui.SourceGenerator.csproj
@@ -3,6 +3,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
     <IsRoslynComponent>true</IsRoslynComponent>
+
+    <VersionPrefix>1.0.3</VersionPrefix>
+    <AssemblyVersion>1.0.3</AssemblyVersion>
+    <FileVersion>1.0.3.6</FileVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.2" />
