--- a/source/Example/Example.csproj
+++ b/source/Example/Example.csproj
@@ -61,7 +61,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\SingleScope.Maui\SingleScope.Maui.csproj" />
+    <ProjectReference Include="..\SingleScope.Maui.SourceGenerator\SingleScope.Maui.SourceGenerator.csproj"
+                      OutputItemType="Analyzer"
+                      ReferenceOutputAssembly="false"/>
+    <ProjectReference Include="..\SingleScope.Maui\SingleScope.Maui.csproj" />
 	</ItemGroup>
 
 </Project>
