feat: add hasher and string extensions

--- a/source/SingleScope.Common.SourceGenerator/SingleScope.Common.SourceGenerator.csproj
+++ b/source/SingleScope.Common.SourceGenerator/SingleScope.Common.SourceGenerator.csproj
@@ -4,9 +4,9 @@
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
     <IsRoslynComponent>true</IsRoslynComponent>
 
-    <VersionPrefix>1.1.0</VersionPrefix>
-    <AssemblyVersion>1.1.0</AssemblyVersion>
-    <FileVersion>1.1.0.2</FileVersion>
+    <AssemblyVersion>1.2.1.2</AssemblyVersion>
+    <FileVersion>1.2.1.0125</FileVersion>
+    <VersionPrefix>$(AssemblyVersion)</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup>
