fix: class name with same name but different namespace will be conflicted

--- a/source/Example/Example.csproj
+++ b/source/Example/Example.csproj
@@ -62,7 +62,7 @@
 
 	<ItemGroup>
     <ProjectReference Include="..\SingleScope.Common\SingleScope.Common.csproj" />
-    <ProjectReference Include="..\SingleScope.SourceGenerator\SingleScope.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\SingleScope.Maui.SourceGenerator\SingleScope.Maui.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\SingleScope.Maui\SingleScope.Maui.csproj" />
 	</ItemGroup>
 
