--- a/source/SingleScope.Maui.SourceGenerator/SingleScope.Maui.SourceGenerator.csproj
+++ b/source/SingleScope.Maui.SourceGenerator/SingleScope.Maui.SourceGenerator.csproj
@@ -4,9 +4,9 @@
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
     <IsRoslynComponent>true</IsRoslynComponent>
 
-    <VersionPrefix>1.1.1</VersionPrefix>
-    <AssemblyVersion>1.1.1</AssemblyVersion>
-    <FileVersion>1.1.1.3</FileVersion>
+    <AssemblyVersion>1.1.3</AssemblyVersion>
+    <FileVersion>1.1.3.0211</FileVersion>
+    <VersionPrefix>$(AssemblyVersion)</VersionPrefix>
   </PropertyGroup>
 
   <ItemGroup>
