--- a/source/SingleScope.Maui/SingleScope.Maui.csproj
+++ b/source/SingleScope.Maui/SingleScope.Maui.csproj
@@ -10,8 +10,8 @@
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">11.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'android'">21.0</SupportedOSPlatformVersion>
 
-    <AssemblyVersion>2.5.0</AssemblyVersion>
-    <FileVersion>2.5.0.0217</FileVersion>
+    <AssemblyVersion>2.5.1</AssemblyVersion>
+    <FileVersion>2.5.1.0223</FileVersion>
     <VersionPrefix>$(AssemblyVersion)</VersionPrefix>
   </PropertyGroup>
 
@@ -50,7 +50,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\SingleScope.Core\SingleScope.Core.csproj" />
+	  <ProjectReference Include="..\SingleScope.Common\SingleScope.Common.csproj" />
 	  <ProjectReference Include="..\SingleScope.Maui.SourceGenerator\SingleScope.Maui.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
