feat: add query as tracking and as no tracking to handle custom query

--- a/source/Benchmarks/SingleScope.Persistence.Benchmarks/SingleScope.Persistence.Benchmarks.csproj
+++ b/source/Benchmarks/SingleScope.Persistence.Benchmarks/SingleScope.Persistence.Benchmarks.csproj
@@ -5,7 +5,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <FileVersion>1.0.0.0308</FileVersion>
+    <FileVersion>1.1.0.0308</FileVersion>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
