--- a/source/Tests/SingleScope.Persistence.UnitTests/SingleScope.Persistence.UnitTests.csproj
+++ b/source/Tests/SingleScope.Persistence.UnitTests/SingleScope.Persistence.UnitTests.csproj
@@ -7,7 +7,8 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
-    <FileVersion>1.0.0.0308</FileVersion>
+    <FileVersion>1.1.0.0308</FileVersion>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
