--- a/source/SingleScope.Persistence/SingleScope.Persistence.csproj
+++ b/source/SingleScope.Persistence/SingleScope.Persistence.csproj
@@ -24,16 +24,9 @@
     <Copyright>Copyright (c)  muhirwanto.dev 2024</Copyright>
     <PackageIcon>logo.png</PackageIcon>
   </PropertyGroup>
-  
-  <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
-  </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\logo.png" Link="logo.png">
-      <PackagePath>\</PackagePath>
-      <Pack>True</Pack>
-    </None>
+    <None Include="..\..\assets\img\logo.png" Link="logo.png" Pack="true" PackagePath="." />
   </ItemGroup>
 
 </Project>
