--- a/source/SingleScope.Persistence.EfCore/SingleScope.Persistence.EfCore.csproj
+++ b/source/SingleScope.Persistence.EfCore/SingleScope.Persistence.EfCore.csproj
@@ -4,7 +4,30 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0415</FileVersion>
+    <VersionPrefix>$(AssemblyVersion)</VersionPrefix>
   </PropertyGroup>
+
+  <!--NuGet properties-->
+  <PropertyGroup>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageId>SingleScope.Persistence.EfCore</PackageId>
+    <PackageTags>SingleScope;Plugin;Persistence;Repository;EFCore</PackageTags>
+    <Title>SingleScope.Persistence.EfCore</Title>
+    <Authors>muhirwanto.dev</Authors>
+    <Description>Plugins for .NET MAUI</Description>
+    <PackageProjectUrl>https://github.com/muhirwanto-dev/singlescope-plugins</PackageProjectUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/muhirwanto-dev/singlescope-plugins/main/logo.png</PackageIconUrl>
+    <RepositoryUrl>https://github.com/muhirwanto-dev/singlescope-plugins</RepositoryUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Copyright>Copyright (c)  muhirwanto.dev 2024</Copyright>
+    <PackageIcon>logo.png</PackageIcon>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\assets\img\logo.png" Link="logo.png" Pack="true" PackagePath="." />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
