--- a/source/SingleScope.Common/SingleScope.Common.csproj
+++ b/source/SingleScope.Common/SingleScope.Common.csproj
@@ -5,8 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <AssemblyVersion>2.0.0</AssemblyVersion>
-    <FileVersion>2.0.0.0415</FileVersion>
+    <AssemblyVersion>2.0.2</AssemblyVersion>
+    <FileVersion>2.0.2.0415</FileVersion>
     <VersionPrefix>$(AssemblyVersion)</VersionPrefix>
 
     <!--NuGet-->
@@ -33,7 +33,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="..\..\assets\img\logo.png" Link="logo.png" Pack="true" PackagePath="." />
+    <None Include="..\..\assets\img\logo.png" Link="logo.png">
+      <PackagePath>\</PackagePath>
+      <Pack>True</Pack>
+    </None>
   </ItemGroup>
 
 </Project>
