--- a/source/SingleScope.Persistence.EfCore/SingleScope.Persistence.EfCore.csproj
+++ b/source/SingleScope.Persistence.EfCore/SingleScope.Persistence.EfCore.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0415</FileVersion>
+    <AssemblyVersion>1.1.0</AssemblyVersion>
+    <FileVersion>1.1.0.0416</FileVersion>
     <VersionPrefix>$(AssemblyVersion)</VersionPrefix>
   </PropertyGroup>
 
@@ -17,7 +17,9 @@
     <PackageTags>SingleScope;Plugin;Persistence;Repository;EFCore</PackageTags>
     <Title>SingleScope.Persistence.EFCore</Title>
     <Authors>muhirwanto.dev</Authors>
-    <Description>Plugins for .NET MAUI</Description>
+    <Description>
+      `SingleScope.Persistence.EFCore` implements Repository and Unit of Work abstraction using `EntityFrameworkCore`.
+    </Description>
     <PackageProjectUrl>https://github.com/muhirwanto-dev/singlescope-plugins</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/muhirwanto-dev/singlescope-plugins/main/logo.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/muhirwanto-dev/singlescope-plugins</RepositoryUrl>
@@ -28,6 +30,7 @@
 
   <ItemGroup>
     <None Include="..\..\assets\img\logo.png" Link="logo.png" Pack="true" PackagePath="." />
+    <None Include="..\..\docs\SingleScope.Persistence.EFCore.md" Pack="true" PackagePath="." />
   </ItemGroup>
 
   <ItemGroup>
