--- a/source/SingleScope.Persistence/SingleScope.Persistence.csproj
+++ b/source/SingleScope.Persistence/SingleScope.Persistence.csproj
@@ -5,8 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <AssemblyVersion>3.0.0</AssemblyVersion>
-    <FileVersion>3.0.0.0415</FileVersion>
+    <AssemblyVersion>3.1.0</AssemblyVersion>
+    <FileVersion>3.1.0.0416</FileVersion>
     <VersionPrefix>$(AssemblyVersion)</VersionPrefix>
   </PropertyGroup>
 
@@ -18,17 +18,22 @@
     <PackageTags>SingleScope;Plugin;Persistence;Repository</PackageTags>
     <Title>SingleScope.Persistence</Title>
     <Authors>muhirwanto.dev</Authors>
-    <Description>Plugins for .NET MAUI</Description>
+    <Description>
+      `SingleScope.Persistence` is a C# .NET library providing core abstractions and building blocks for the data persistence layer.
+      It facilitates the implementation of patterns like Repository and Unit of Work.
+    </Description>
     <PackageProjectUrl>https://github.com/muhirwanto-dev/singlescope-plugins</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/muhirwanto-dev/singlescope-plugins/main/logo.png</PackageIconUrl>
     <RepositoryUrl>https://github.com/muhirwanto-dev/singlescope-plugins</RepositoryUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Copyright (c)  muhirwanto.dev 2024</Copyright>
     <PackageIcon>logo.png</PackageIcon>
+    <PackageReadmeFile>SingleScope.Persistence.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
     <None Include="..\..\assets\img\logo.png" Link="logo.png" Pack="true" PackagePath="." />
+    <None Include="..\..\docs\SingleScope.Persistence.md" Pack="true" PackagePath="." />
   </ItemGroup>
 
 </Project>
