--- a/source/SingleScope.Persistence.EfCore/SingleScope.Persistence.EfCore.csproj
+++ b/source/SingleScope.Persistence.EfCore/SingleScope.Persistence.EfCore.csproj
@@ -11,26 +11,17 @@
 
   <!--NuGet properties-->
   <PropertyGroup>
-    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <PackageOutputPath>..\..\.nupkg</PackageOutputPath>
     <PackageId>SingleScope.Persistence.EFCore</PackageId>
     <PackageTags>SingleScope;Plugin;Persistence;Repository;EFCore</PackageTags>
     <Title>SingleScope.Persistence.EFCore</Title>
-    <Authors>muhirwanto.dev</Authors>
     <Description>
       `SingleScope.Persistence.EFCore` implements Repository and Unit of Work abstraction using `EntityFrameworkCore`.
     </Description>
-    <PackageProjectUrl>https://github.com/muhirwanto-dev/singlescope-plugins</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/muhirwanto-dev/singlescope-plugins/main/logo.png</PackageIconUrl>
-    <RepositoryUrl>https://github.com/muhirwanto-dev/singlescope-plugins</RepositoryUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <Copyright>Copyright (c)  muhirwanto.dev 2024</Copyright>
-    <PackageIcon>logo.png</PackageIcon>
+    <PackageReadmeFile>docs\SingleScope.Persistence.EFCore.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\assets\img\logo.png" Link="logo.png" Pack="true" PackagePath="." />
-    <None Include="..\..\docs\SingleScope.Persistence.EFCore.md" Pack="true" PackagePath="." />
+    <None Include="..\..\docs\SingleScope.Persistence.EFCore.md" Pack="true" PackagePath="docs" />
   </ItemGroup>
 
   <ItemGroup>
