--- a/source/Directory.Build.props
+++ b/source/Directory.Build.props
@@ -1,17 +1,29 @@
 <Project>
   <PropertyGroup>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <PackageOutputPath>..\..\.nupkg</PackageOutputPath>
+
     <Authors>muhirwanto.dev</Authors>
-    <PackageProjectUrl>https://github.com/muhirwanto-dev/singlescope-plugins</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/muhirwanto-dev/singlescope-plugins/main/logo.png</PackageIconUrl>
-    <RepositoryUrl>https://github.com/muhirwanto-dev/singlescope-plugins</RepositoryUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <Copyright>Copyright (c) muhirwanto.dev 2024</Copyright>
+
+    <RepositoryUrl>https://github.com/muhirwanto-dev/singlescope-plugins</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/muhirwanto-dev/singlescope-plugins</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+
     <PackageIcon>assets\img\logo.png</PackageIcon>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+
+    <PackageOutputPath>..\..\.nupkg</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\assets\img\logo.png" Link="logo.png" Pack="true" PackagePath="assets\img" />
+    <None Include="..\..\README.md"
+          Link="README.md"
+          Pack="true"
+          PackagePath="" />
+
+    <None Include="..\..\assets\img\logo.png"
+		  Link="logo.png"
+		  Pack="true"
+		  PackagePath="assets\img" />
   </ItemGroup>
 </Project>
