feat: separate package for Execution and Execution.EFCore

--- a/source/SingleScope.Querying.Execution.EFCore/SingleScope.Querying.Execution.EFCore.csproj
+++ b/source/SingleScope.Querying.Execution.EFCore/SingleScope.Querying.Execution.EFCore.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SingleScope.Querying\SingleScope.Querying.csproj" />
+    <ProjectReference Include="..\SingleScope.Querying.Execution\SingleScope.Querying.Execution.csproj" />
   </ItemGroup>
 
 </Project>
