--- a/tests/SingleScope.Querying.Test/SingleScope.Querying.Test.csproj
+++ b/tests/SingleScope.Querying.Test/SingleScope.Querying.Test.csproj
@@ -5,19 +5,20 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
-    <AssemblyVersion>1.0.0.0103</AssemblyVersion>
-    <FileVersion>1.0.0.0103</FileVersion>
+    <AssemblyVersion>1.0.0.0104</AssemblyVersion>
+    <FileVersion>1.0.0.0104</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\source\SingleScope.Querying.Execution\SingleScope.Querying.Execution.csproj" />
+    <ProjectReference Include="..\..\source\SingleScope.Querying.Execution.EFCore\SingleScope.Querying.Execution.EFCore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
