--- a/source/SingleScope.Querying.Execution/SingleScope.Querying.Execution.csproj
+++ b/source/SingleScope.Querying.Execution/SingleScope.Querying.Execution.csproj
@@ -4,8 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
 
-    <AssemblyVersion>1.0.2</AssemblyVersion>
-    <FileVersion>1.0.2.0104</FileVersion>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0104</FileVersion>
     <VersionPrefix>$(AssemblyVersion)</VersionPrefix>
 
     <!--NuGet-->
@@ -15,7 +15,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SingleScope.Querying\SingleScope.Querying.csproj" />
+    <PackageReference Include="SingleScope.Querying" Version="1.0.4" />
   </ItemGroup>
 
 </Project>
