--- a/source/SingleScope.Persistence/SingleScope.Persistence.csproj
+++ b/source/SingleScope.Persistence/SingleScope.Persistence.csproj
@@ -5,8 +5,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <AssemblyVersion>5.1.0</AssemblyVersion>
-    <FileVersion>5.1.0.1114</FileVersion>
+    <AssemblyVersion>7.0.0</AssemblyVersion>
+    <FileVersion>7.0.0.0104</FileVersion>
     <VersionPrefix>$(AssemblyVersion)</VersionPrefix>
   </PropertyGroup>
 
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
+    <PackageReference Include="SingleScope.Querying" Version="1.0.4" />
   </ItemGroup>
 
 </Project>
