--- a/source/SingleScope.Reporting.Logging/SingleScope.Reporting.Logging.csproj
+++ b/source/SingleScope.Reporting.Logging/SingleScope.Reporting.Logging.csproj
@@ -25,7 +25,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.1" />
-    <PackageReference Include="SingleScope.Reporting" Version="1.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SingleScope.Reporting\SingleScope.Reporting.csproj" />
   </ItemGroup>
 
 </Project>
