--- a/source/SingleScope.Maui/SingleScope.Maui.csproj
+++ b/source/SingleScope.Maui/SingleScope.Maui.csproj
@@ -3,10 +3,12 @@
 	<PropertyGroup>
     <TargetFrameworks>net9.0-android;net9.0-ios;net9.0-maccatalyst;net10.0-android;net10.0-ios;net10.0-maccatalyst</TargetFrameworks>
     <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net10.0-windows10.0.19041.0</TargetFrameworks>
+
     <UseMaui>true</UseMaui>
-		<SingleProject>true</SingleProject>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
+    <MauiVersion Condition="$([System.String]::new('$(TargetFramework)').StartsWith('net10.0'))">10.0.10</MauiVersion>
+    <SingleProject>true</SingleProject>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
 
     <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">15.0</SupportedOSPlatformVersion>
     <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">15.0</SupportedOSPlatformVersion>
@@ -14,8 +16,8 @@
     <SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</SupportedOSPlatformVersion>
     <TargetPlatformMinVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'">10.0.17763.0</TargetPlatformMinVersion>
 
-    <AssemblyVersion>4.0.0</AssemblyVersion>
-    <FileVersion>4.0.0.0106</FileVersion>
+    <AssemblyVersion>10.0.0</AssemblyVersion>
+    <FileVersion>10.0.0.0112</FileVersion>
     <VersionPrefix>$(AssemblyVersion)</VersionPrefix>
   </PropertyGroup>
 
@@ -29,23 +31,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-		<PackageReference Include="CommunityToolkit.Maui" Version="12.2.0" Condition="$([System.String]::new('$(TargetFramework)').StartsWith('net9.0'))" />
-		<PackageReference Include="CommunityToolkit.Maui" Version="12.3.0" Condition="$([System.String]::new('$(TargetFramework)').StartsWith('net10.0'))" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="12.3.0" Condition="$([System.String]::new('$(TargetFramework)').StartsWith('net9.0'))" />
+		<PackageReference Include="CommunityToolkit.Maui" Version="13.0.0" Condition="$([System.String]::new('$(TargetFramework)').StartsWith('net10.0'))" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+		<PackageReference Include="SingleScope.Common" Version="4.1.1" />
 	</ItemGroup>
 
   <ItemGroup>
     <None Include="..\..\docs\SingleScope.Maui.md" Pack="true" PackagePath="docs" />
   </ItemGroup>
 
-  <ItemGroup>
-	  <ProjectReference Include="..\SingleScope.Common\SingleScope.Common.csproj" />
-	  <ProjectReference Include="..\SingleScope.Maui.SourceGenerator\SingleScope.Maui.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-	</ItemGroup>
-
-  <ItemGroup>
-    <None Include="..\SingleScope.Maui.SourceGenerator\bin\$(Configuration)\netstandard2.0\SingleScope.Maui.SourceGenerator.dll" Pack="true" PackagePath="analyzers" Visible="false" />
-  </ItemGroup>
 </Project>
